--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,115 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>resume</title>
+<title>Resume</title>
 </head>
-<body>
+<body style="background-color:lightblue;">
+<h4>Neha Singh </h4>
+<h4> style="color:blue;">nehashanaya13@gmail.com</h4>
+<h4>9008684584</h4>
 
-<h1><b>NEHA SINGH M</b></h1>
-<p>nehashanaya13@gmail.com</p>
-<p>9008684584</p>
-<hr>
+<hr />
+<h3><b>CV Hights</b></h3>
+<p>
+<ul>
+<li>Learnt basic Python, HTML, C++, C languages, MySQL.</li>
+<li>Deticated person.</li>
+<li>Good Communication skills, Presentation skills, Time management.</li>
+</ul>
+</p><br><hr/>
+<h3><b>Professional Experience</b></h3>
+<p>
+<ul>
+<li>Zinavo Technologies</li>
+<p>Job Responsibility</p>
+<ul type="circle">
+<li>Worked as Intern.</li>
+<li>Digital marketing.</li>
+<li>Learnt about different SEO tools .</li>
+</ul></ul>
+</p><br><hr/>
+<h3><b>Educational Qualifification</b></h3>
+<table border="1" width="50%">
+<tr>
+<th>Qualification</th>
+<th>Board</th>
+<th>Percentage/CGPA</th>
+<th>Year</th>
+</tr>
+<tr>
+<td>Computer Engineering</td>
+<td>Presidency University</td>
+<td>6.3</td>
+<td>2021</td>
+</tr>
+<tr>
+<td>PUC</td>
+<td>Sri Chaitanya PU Clg</td>
+<td>73%</td>
+<td>2017</td>
+</tr>
+<tr>
+<td>SSLC</td>
+<td>Sri Chaitanya Techno School </td>
+<td>83%</td>
+<td>2015</td>
+</tr>
+</table><hr/>
+<h3><b>Independent Cources</b></h3>
+<p>
+<ul type="circle">
+<li>C Programming</li>
+<li>Java</li>
+<li>Python</li>
+<li>C++</li>
+<li>MySQL Database</li>
+<li>HTML</li>
+</ul>
+<hr />
+<h3><b>Technical Skills</b></h3>
+<p>
+<ul type="circle">
+<li><span style="color:red;">Programming languages:</span>Has hands-on experience over programming languages like C,C++ and Python.</li>
+<li><span style="color:red;">Project management:</span>Experienced on projects developed and undertaken.</li>
+</ul><br>
+<hr />
+<h3><b>Certificates/Awards</b></h3>
+<p>
+<ul>
+<li><b>NPTEL Certificate in Digital Design</b></li>
+<li><b>Participation Certificate in CPMA, conducted by Microsoft .</b></li>
+</ul><br>
+<hr />
+<h3><b>Personal Informations:</b></h3>
+<p>
+<ul>
+<li>Language Known: English, Kannada, Hindi .</li>
+<li>Hobbies: Reading books, Listening to Music, Wildlife Photography Dancing .</li>
+</ul><br>
+<hr />
+<h3><b>Other Informations:</b></h3>
+<p>
+<ul>
+<li>Expected Salary: As per company.</li>
+<li>Area of Interest: Software Testing, App Development.</li>
+</ul><br>
+<hr />
+<h3><b>Declaration</b></h3>
+<p> I hereby declare that the above-mentioned information is correct up to my knowledge and I bear the responsibility for the correctness of the above-mentioned particulars.</p>
 
-<h1><b>CV Highlights</b></h1><br>
-<p>1.Digital Marketing</p>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
