--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 </head>
 <body style="background-color:lightblue;">
 <h4>Neha Singh </h4>
-<h4> style="color:blue;">nehashanaya13@gmail.com</h4>
+<h4 style="color:blue;">nehashanaya13@gmail.com</h4>
 <h4>9008684584</h4>
 
 <hr />
