--- a/pseudoelement.html
+++ b/pseudoelement.html
@@ -3,9 +3,13 @@
 <style>
 p::first-line{color:red;font-variant:small-caps}
 P::first-letter{color:green;font-size:xx-large}
+h1::before{content:url(/home/Sem6B7/20171cse0453/smiley.jpeg);}
+h1::after{content:url(/home/Sem6B7/20171cse0453/smiley.jpeg);}
+::selection{color:red;background:yellow}
 </style>
 </head>
 <body>
+<h1>Presidency University</h1>
 <p>Find that color with our color pickerand discover colors harmonies,tints,shades</p>
 </body>
 </html>
